<resources>
    <string name="app_name" translatable="false">Vädret</string>
    <string name="about_app">About</string>
    <string name="thirdparty">Thirdparty</string>
    <string name="radar">Radar</string>
    <string name="slogan">Open code, open data</string>
    <string name="feels_like">Feels like</string>
    <string name="unknown_area">Unknown area</string>
    <string name="risk_for_thunder">Risk for thunder</string>
    <string name="precipitation_max">%1$s mm/h</string>
    <string name="wsymb2_clear_sky">Clear sky</string>
    <string name="wsymb2_nearly_clear_sky">Nearly clear sky</string>
    <string name="wsymb2_variable_cloudiness">Varying cloudiness</string>
    <string name="wsymb2_halfclear_sky">Half clear sky</string>
    <string name="wsymb2_cloudy_sky">Cloudy sky</string>
    <string name="wsymb2_overcast">Overcast</string>
    <string name="wsymb2_fog">Fog</string>
    <string name="wsymb2_light_rain_showers">Light rain showers</string>
    <string name="wsymb2_moderate_rain_showers">Moderate rain showers</string>
    <string name="wsymb2_heavy_rain_showers">Heavy rain showers</string>
    <string name="wsymb2_thunderstorm">Thunderstorm</string>
    <string name="wsymb2_light_sleet_showers">Light sleet showers</string>
    <string name="wsymb2_moderate_sleet_showers">Moderate sleet showers</string>
    <string name="wsymb2_heavy_sleet_showers">Heavy sleet showers</string>
    <string name="wsymb2_light_snow_showers">Light snow showers</string>
    <string name="wsymb2_moderate_snow_showers">Moderate snow showers</string>
    <string name="wsymb2_heavy_snow_showers">Heavy snow showers</string>
    <string name="wsymb2_light_rain">Light rain</string>
    <string name="wsymb2_moderate_rain">Moderate rain</string>
    <string name="wsymb2_heavy_rain">Heavy rain</string>
    <string name="wsymb2_thunder">Thunder</string>
    <string name="wsymb2_light_sleet">Light sleet</string>
    <string name="wsymb2_moderate_sleet">Moderate sleet</string>
    <string name="wsymb2_heavy_sleet">Heavy sleet</string>
    <string name="wsymb2_light_snowfall">Light snowfall</string>
    <string name="wsymb2_moderate_snowfall">Moderate snowfall</string>
    <string name="wsymb2_heavy_snowfall">Heavy snowfall</string>
    <string name="ws_with">with</string>
    <string name="ws_mostly">mostly</string>
    <string name="ws_today">Today</string>
    <string name="ws_winds">winds</string>
    <string name="ws_wind">wind</string>
    <string name="ws_calm">calm</string>
    <string name="ws_weak">weak</string>
    <string name="ws_moderate">moderate</string>
    <string name="ws_fresh">fresh</string>
    <string name="ws_strong">strong</string>
    <string name="ws_windstorms">storm</string>
    <string name="ws_hurricanes">hurricane</string>
    <string name="test_locality_name" translatable="false">Norrköping Test</string>
    <string name="test_county_name" translatable="false">Östergötland Test</string>
    <string name="test_municipality_name" translatable="false">Norrköping Test</string>
    <string name="test_degree_celcius" translatable="false">-9° Test</string>
    <string name="test_degree_feels_like_celcius" translatable="false">-13° Test</string>
    <string name="test_wind_speed" translatable="false">15 m/s Test</string>
    <string name="test_precipitation_description" translatable="false">Lätta regnskurar Test</string>
    <string name="test_humidity" translatable="false">78% Test</string>
    <string name="test_pressure" translatable="false">812 hPa Test</string>
    <string name="test_risk_thunder" translatable="false">Risk för åska Test</string>
    <string name="test_time_of_day" translatable="false">15:00</string>
    <string name="test_name_of_day" translatable="false">Måndag</string>
    <string name="widget_setup_title" translatable="false">Vädret</string>
    <string name="widget_setup_sub_title">Widget Configuration</string>
    <string name="widget_setup_theme">Theme</string>
    <string name="widget_setup_update_interval">Update interval</string>
    <string name="widget_setup_forecast_format">Forecast format</string>
    <string name="widget_setup_use_my_phones_position_to_fetch_weather">Use my phones position to fetch weather</string>
    <string name="widget_setup_cancel">Cancel</string>
    <string name="widget_setup_setup_canceled">Setup canceled</string>
    <string name="widget_setup_confirm">Confirm</string>
    <string name="widget_setup_search">Search</string>
    <string name="widget_setup_currently_selected">Currently selected</string>
    <string name="north">northern</string>
    <string name="north_north_east">north to northeastern</string>
    <string name="north_east">northeastern</string>
    <string name="east_north_east">east to northeastern</string>
    <string name="east">eastern</string>
    <string name="east_south_east">east to southeastern</string>
    <string name="south_east">southeastern</string>
    <string name="south_south_east">south to southeastern</string>
    <string name="south">south</string>
    <string name="south_south_west">south to southwestern</string>
    <string name="south_west">southwestern</string>
    <string name="west_south_west">west to southwestern</string>
    <string name="west">west</string>
    <string name="west_north_west">west to northwestern</string>
    <string name="north_west">northwestern</string>
    <string name="north_north_west">north to northwestern</string>
    <string name="empty_wind_direction" translatable="false"></string>
    <string name="no_url_available">No URL available</string>
    <string name="prsort_no_precipitation">No precipitation</string>
    <string name="prsort_snow">Snow</string>
    <string name="prsort_snow_and_rain">Snow and rain</string>
    <string name="prsort_rain">Rain</string>
    <string name="prsort_drizzle">Drizzle</string>
    <string name="prsort_freezing_rain">Freezing rain</string>
    <string name="prsort_freezing_drizzle">Freezing drizzle</string>
    <string name="io_exception" translatable="false">IOException</string>
    <string name="network_failure">Network Failure</string>
    <string name="no_weather_available">No weather available</string>
    <string name="disk_cache_evict" translatable="false">Disk cache evication failed</string>
    <string name="disk_cache_write" translatable="false">Disk cache write failed</string>
    <string name="disk_cache_read" translatable="false">Disk cache read failed</string>
    <string name="unhandled_error" translatable="false">Unhandled exception</string>
    <string name="no_location_permission">No location permission</string>
    <string name="location_failure">Location not available</string>
    <string name="no_network_available">No network available</string>
    <string name="location_provider_disabled">Location provider is disabled</string>
    <string name="failed_loading_file">Could not read file</string>
    <string name="data_not_available_at_this_location">No weather data available for this location.</string>
    <string name="preferences_updated_successfully">Preferences updated successfully!</string>
    <string name="permission_missing">Some permissions missing. Functionality will be limited.</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="select_a_theme">Select a theme</string>
    <string name="light_key" translatable="false">Light</string>
    <string name="dark_key" translatable="false">Dark</string>
    <string name="amoled_key" translatable="false">AMOLED</string>
    <string name="light_no_background_key" translatable="false">Light (No background)</string>
    <string name="widget_interval_fifteen_min" translatable="false">15 min</string>
    <string name="widget_interval_thirty_min" translatable="false">30 min</string>
    <string name="widget_interval_one_hour" translatable="false">1 hour</string>
    <string name="widget_interval_three_hours" translatable="false">3 hours</string>
    <string name="widget_interval_six_hours" translatable="false">6 hours</string>
    <string name="widget_interval_twelve_hours" translatable="false">12 hours</string>
    <string name="widget_interval_twenty_four_hours" translatable="false">24 hours</string>
    <string name="widget_interval_hourly">Hourly</string>
    <string name="widget_interval_bihourly">Bi-hourly</string>
    <string name="widget_interval_every_three_hour">Every 3rd hour</string>
    <string name="widget_interval_every_six_hour">Every 6th hour</string>
    <string name="widget_select_update_interval">Select update interval</string>
    <string name="widget_update_interval">Update interval</string>
    <string name="widget_select_widget_theme">Select widget theme</string>
    <string name="widget_widget_theme">Widget Theme</string>
    <string name="widget_select_location_mode">Select location mode</string>
    <string name="widget_use_gps_automatically">Use my GPS automatically</string>
    <string name="widget_use_location_manually">Use a fixed location</string>
    <string name="widget_will_update_shortly">Widget will update shortly</string>
    <string name="widget_must_select_a_locality">Must select a locality</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="sun_wont_rise_today">Sun won\'t rise today</string>
    <string name="sun_wont_set_today">Sun won\'t set today</string>
    <string name="percent" translatable="false">%</string>
    <string name="m_s" translatable="false">m/s</string>
    <string name="degree" translatable="false">°</string>
    <string name="about_app_about_title">About app</string>
    <string name="about_app_libraries_tab_title">Libraries</string>
    <string name="about_app_description">Weather app for Sweden</string>
    <string name="cd_about_app_icon" translatable="false">AboutAppImage</string>
    <string name="version_row_title">Version</string>
    <string name="license_row_title">License</string>
    <string name="changelog_row_title">Changelog</string>
    <string name="source_code_row_title">Source code</string>
    <string name="app_release_page" translatable="false">https://github.com/vadret/android/releases</string>
    <string name="license_row_hint" translatable="false">Apache License, Version 2.0</string>
    <string name="app_github_url" translatable="false">https://vadret.github.io/android</string>
    <string name="app_github_source_url" translatable="false">https://github.com/vadret/android</string>
    <string name="app_license_url" translatable="false">https://github.com/vadret/android/blob/master/LICENSE</string>
    <string name="app_github_changelog_url" translatable="false">https://github.com/vadret/android/blob/master/app/src/main/res/raw/changelog.md</string>
    <string name="changelog_dialog_title">Changelog</string>
    <string name="ok" translatable="false">OK</string>
    <string name="project_third_party">Project</string>
    <string name="source_third_party">Source</string>
    <string name="license_third_party">License</string>
    <string name="warnings">Warnings</string>
    <string name="settings">Settings</string>
    <string name="setting_location_title">Location settings</string>
    <string name="setting_municipality">Municipality</string>
    <string name="setting_latitude">Latitude</string>
    <string name="setting_longitude">Longitude</string>
    <string name="setting_city">City</string>
    <string name="setting_county">County</string>
    <string name="use_gps_by_default">Use GPS by default</string>
    <string name="setting_current_location">Current location</string>
    <string name="gps_is_not_being_used">GPS position will not be used to fetch weather</string>
    <string name="gps_is_being_used">GPS position will be used each time to fetch weather for current location</string>
</resources>