<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/weatherForecastFragment">

    <fragment
        android:id="@+id/weatherForecastFragment"
        android:name="fi.kroon.vadret.presentation.weatherforecast.WeatherForecastFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_weatherForecastFragment_to_aboutFragment"
            app:destination="@id/aboutAppFragment" />
        <action
            android:id="@+id/action_weatherForecastFragment_to_alertFragment"
            app:destination="@id/alertFragment" />
        <action
            android:id="@+id/action_weatherForecastFragment_to_radarFragment"
            app:destination="@id/radarFragment" />
        <action
            android:id="@+id/action_weatherForecastFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/radarFragment"
        android:name="fi.kroon.vadret.presentation.RadarFragment"
        android:label="@string/radar" />
    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="fi.kroon.vadret.presentation.aboutapp.AboutAppFragment"
        android:label="@string/about_app" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="fi.kroon.vadret.presentation.AlertFragment"
        android:label="@string/warnings" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="fi.kroon.vadret.presentation.SettingsFragment"
        android:label="@string/settings" />

</navigation>
