<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/weather_forecast_medium_padding">

    <TextView
        android:id="@+id/weatherMediumLocaleDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_name_of_day"
        android:textColor="@android:color/white"
        android:textSize="@dimen/weather_forecast_medium_min_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weatherMediumDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_time_of_day"
        android:textColor="@android:color/white"
        android:textSize="@dimen/weather_forecast_medium_min_text_size" />

    <ImageView
        android:id="@+id/weatherMediumDayIcon"
        android:layout_width="@dimen/weather_forecast_medium_icon_width"
        android:layout_height="@dimen/weather_forecast_medium_icon_height"
        android:src="@drawable/wsymb2_heavy_rain" />

    <TextView
        android:id="@+id/weatherMediumTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_degree_celcius"
        android:textColor="@android:color/white"
        android:textSize="@dimen/weather_forecast_medium_min_text_size" />

    <TextView
        android:id="@+id/weatherMediumWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_wind_speed"
        android:textColor="@android:color/white"
        android:textSize="@dimen/weather_forecast_medium_min_text_size" />

</LinearLayout>