<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackground"
    android:orientation="vertical"
    android:padding="@dimen/weather_forecast_setup_padding_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/weather_forecast_setup_margin_end_item_spacing"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widgetTinySetupIcon"
            android:layout_width="@dimen/weather_forecast_setup_icon_width"
            android:layout_height="@dimen/weather_forecast_setup_icon_height"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/weather_forecast_setup_margin_end"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/widgetTinySetupHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/weather_forecast_setup_margin_end_item_spacing"
            android:text="@string/widget_setup_title"
            android:textColor="?attr/titleText"
            android:textSize="@dimen/weather_forecast_setup_header_text_size" />
    </LinearLayout>

    <!-- Sub header -->
    <TextView
        android:id="@+id/widgetTinySetupSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/weather_forecast_setup_margin_end_item_spacing"
        android:padding="@dimen/weather_forecast_setup_padding"
        android:text="@string/widget_setup_sub_title"
        android:textColor="?attr/titleText"
        android:textSize="@dimen/weather_forecast_setup_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/weather_forecast_setup_margin_end_item_spacing"
        android:orientation="horizontal"
        android:padding="@dimen/weather_forecast_setup_padding">

        <TextView
            android:id="@+id/widgetTinySetupLocationModeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/widget_setup_use_my_phones_position_to_fetch_weather"
            android:textColor="?attr/titleText"
            android:textSize="@dimen/weather_forecast_setup_text_size" />

        <Switch
            android:id="@+id/widgetTinySetupLocationModeKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false" />
    </LinearLayout>

    <!-- Currently selected locality -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/weather_forecast_setup_margin_end_item_spacing"
        android:orientation="horizontal"
        android:padding="@dimen/weather_forecast_setup_padding">

        <TextView
            android:id="@+id/widgetTinySetupCurrentLocality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/widget_setup_currently_selected"
            android:textColor="?attr/titleText"
            android:textSize="@dimen/weather_forecast_setup_text_size" />

        <TextView
            android:id="@+id/widgetTinySetupSelectedLocalityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="?attr/titleText"
            android:textSize="@dimen/weather_forecast_setup_text_size" />
    </LinearLayout>

    <!-- Search View -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/widgetTinySetupLocalitySearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/widgetTinySetupAutoCompleteRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:scrollbars="none"
        android:visibility="gone"
        tools:listitem="@layout/weather_forecast_auto_complete_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/weather_forecast_setup_margin_end_item_spacing"
        android:orientation="horizontal"
        android:padding="@dimen/weather_forecast_setup_padding">

        <TextView
            android:id="@+id/widgetTinySetupInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_setup_update_interval"
            android:textColor="?attr/titleText"
            android:textSize="@dimen/weather_forecast_setup_text_size" />

        <Spinner
            android:id="@+id/widgetSetupTinyIntervalSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/weather_forecast_setup_spinner_height"
            android:spinnerMode="dialog"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/weather_forecast_setup_margin_end_item_spacing"
        android:orientation="horizontal"
        android:padding="@dimen/weather_forecast_setup_padding">

        <TextView
            android:id="@+id/widgetTinySetupThemeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_setup_theme"
            android:textColor="?attr/titleText"
            android:textSize="@dimen/weather_forecast_setup_text_size" />

        <Spinner
            android:id="@+id/widgetTinySetupThemeSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/weather_forecast_setup_spinner_height"
            android:spinnerMode="dialog"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/weather_forecast_setup_padding">

        <Button
            android:id="@+id/widgetTinySetupCancelView"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/weather_forecast_setup_button_margin"
            android:layout_weight="1"
            android:text="@string/widget_setup_cancel"
            android:textSize="@dimen/weather_forecast_setup_text_size" />

        <Button
            android:id="@+id/widgetTinySetupConfirmView"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/weather_forecast_setup_button_margin"
            android:layout_weight="1"
            android:text="@string/widget_setup_confirm"
            android:textSize="@dimen/weather_forecast_setup_text_size" />
    </LinearLayout>
</LinearLayout>